--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ DEST_LANG=""
 INPUT_FILE=""
 OUTPUT_FILE=""
 PROMPT="Translate the following text to {dest_lang}:\n\n{content}"
+
+#CHUNK_SIZE sets the number of maximum tokens to send OpenAI in each iteration
+CHUNK_SIZE=1000 
